# tapeYadro

./: CMakeLists.txt  config.h  config.txt  main.cpp  tape.h  test.cpp
include/: config.h  mergesort.h  tape.h
src/: config.cpp  main.cpp  mergesort.cpp  tape.cpp
test/: test.cpp
